--- a/BSL/SkMonCloExtBSL.bib
+++ b/BSL/SkMonCloExtBSL.bib
@@ -7,7 +7,7 @@
   number    = {4},
   pages     = {297--318},
   year      = {1990},
-  doi       = {10.1002/malq.19900360405}
+  note       = {{D}OI: \url{10.1002/malq.19900360405}}
 }
 
 @article{altenkirch:monads:2014,
@@ -21,17 +21,17 @@
   number    = {1},
   eid   = {3},
   year      = {2015},
-  doi       = {10.2168/lmcs-11(1:3)2015}
+  note       = {{D}OI: \url{10.2168/lmcs-11(1:3)2015}}
 }
 
 @article{andreoli:logic:1992,
 	title = {Logic Programming with Focusing Proofs in Linear Logic},
 	volume = {2},
-	doi = {10.1093/logcom/2.3.297},
+	note = {{D}OI: \url{10.1093/logcom/2.3.297}},
 	pages = {297--347},
 	number = {3},
 	XXXjournal = {J. Log.  Comput.},
-	journal = "J. of Logic and Computation",
+	journal = "Journal of Logic and Computation",
 	author = {Jean-Marc Andreoli},
 	year = {1992}
 }
@@ -40,11 +40,11 @@
 @article{bourke:skew:2017,
 	title = {Skew structures in 2-category theory and homotopy theory},
 	volume = {12},
-	doi = {10.1007/s40062-015-0121-z},
+	note = {{D}OI: \url{10.1007/s40062-015-0121-z}},
 	pages = {31--81},
 	number = {1},
 	XXXjournal = {J. Homotopy Relat. Struct.},
-	journal = "J. of Homotopy and Related Structures",
+	journal = "Journal of Homotopy and Related Structures",
 	author = {John Bourke},
 	year = {2017}
 }
@@ -52,10 +52,10 @@
 @article{bourke:skew:2018,
 	title = {Skew Monoidal Categories and Skew Multicategories},
 	volume = {506},
-	doi = {10.1016/j.jalgebra.2018.02.039},
+	note = {{D}OI: \url{10.1016/j.jalgebra.2018.02.039}},
 	pages = {237--266},
 	XXXjournal = {J. Alg.},
-	journal = "J. of Algebra",
+	journal = "Journal of Algebra",
 	author = {John Bourke and Stephen Lack},
 	year = {2018}
 }
@@ -75,11 +75,11 @@
 @article{buckley:catalan:2015,
 	title = {The {C}atalan Simplicial Set},
 	volume = {158},
-	doi = {10.1017/s0305004114000498},
+	note = {{D}OI: \url{10.1017/s0305004114000498}},
 	pages = {211--222},
 	number = {2},
 	XXXjournal = {Math. Proc. Cambridge Philos. Soc.},
-	journal = "Mathematical Proc. of Cambridge Philosophical Society",
+	journal = "Mathematical Proceedings of Cambridge Philosophical Society",
 	author = {Michael Buckley and Richard Garner and Stephen Lack and Ross Street},
 	year = {2015}
 }
@@ -93,21 +93,21 @@
                Giancarlo Mauri and
                Luke Ong},
   title     = {Canonical Sequent Proofs via Multi-Focusing},
-  booktitle = {Proc. of 5th IFIP Int. Conf. on Theoretical Computer Science, {TCS} 2008},
+  booktitle = {Proceedings of 5th IFIP International Conference on Theoretical Computer Science, {TCS} 2008},
   XXXseries    = {Int.\ Feder.\ of Inform.\ Process.},
-  series = "Int.\ Federation of Information Processing Series",
+  series = "International\ Federation of Information Processing Series",
   volume    = {273},
   pages     = {383--396},
   publisher = {Springer},
   year      = {2008},
-  doi       = {10.1007/978-0-387-09680-3\_26}
+  note       = {{D}OI: \url{10.1007/978-0-387-09680-3\_26}}
 }
 
 @inproceedings{eilenberg:closed:1966,
 	title = {Closed Categories},
-	doi = {10.1007/978-3-642-99902-4\_22},
+	note = {{D}OI: \url{10.1007/978-3-642-99902-4\_22}},
 	pages = {421--562},
-	booktitle = {Proc. of Conf. on Categorical Algebra (La Jolla, 1965)},
+	booktitle = {Proceedings of Conference on Categorical Algebra (La Jolla, 1965)},
 	publisher = {Springer},
 	author = {Samuel Eilenberg and G. Max Kelly},
 	editor = {Eilenberg, S. and Harrison, D. K. and {Mac Lane}, S. and R\"ohrl, H.},
@@ -123,7 +123,7 @@
   number    = {3},
   pages     = {255--296},
   year      = {1991},
-  doi       = {10.1017/s0960129500001328}
+  note       = {{D}OI: \url{10.1017/s0960129500001328}}
 }
 
 @inproceedings{hasegawa:linear:2017,
@@ -131,13 +131,13 @@
   editor    = {Iliano Cervesato and
                Maribel Fern{\'{a}}ndez},
   title     = {Linear Exponential Comonads without Symmetry},
-  booktitle = {Proc. of 4th Int. Workshop on Linearity, {LINEARITY} 2016},
+  booktitle = {Proceedings of 4th International Workshop on Linearity, {LINEARITY} 2016},
   XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
-  series = "Electronic Proc. in Theoretical Computer Science",
+  series = "Electronic Proceedings in Theoretical Computer Science",
   volume    = {238},
   pages     = {54--63},
   year      = {2016},
-  doi       = {10.4204/etpcs.238.6},
+  note       = {{D}OI: \url{10.4204/etpcs.238.6}},
   publisher = "Open Publishing Assoc."
 }
 
@@ -150,14 +150,14 @@
                Valeria {de Paiva} and
                Lorenzo {Tortora de Falco}},
   title     = {On the {L}ambek Calculus with an Exchange Modality},
-  booktitle = {Proc. of Joint Int. Workshop on Linearity {\&} Trends
+  booktitle = {Proceedings of Joint International Workshop on Linearity {\&} Trends
                in Linear Logic and Applications, Linearity-TLLA 2018},
   XXXseries    = {Electron. Proc. Theor. Comput. Sci.},
-  series = "Electronic Proc. in Theoretical Computer Science",
+  series = "Electronic Proceedings in Theoretical Computer Science",
   volume    = {292},
   pages     = {43--89},
   year      = {2018},
-  doi       = {10.4204/eptcs.292.4},
+  note       = {{D}OI: \url{10.4204/eptcs.292.4}},
   publisher = "Open Publishing Assoc."
 }
 
@@ -175,7 +175,7 @@
 @article{lack:triangulations:2014,
 	title = {Triangulations, Orientals, and Skew Monoidal Categories},
 	volume = {258},
-	doi = {10.1016/j.aim.2014.03.003},
+	note = {{D}OI: \url{10.1016/j.aim.2014.03.003}},
 	pages = {351--396},
 	XXXjournal = {Adv.\ Math.},
 	journal = "Advances in Mathematics",
@@ -192,7 +192,7 @@
   number={3},
   pages={154--170},
   year={1958},
-  doi={10.2307/2310058}
+  note={{D}OI: \url{10.2307/2310058}}
 }
 
 @article{lambek:deductive:68,
@@ -205,7 +205,7 @@
   number    = {4},
   pages     = {287--318},
   year      = {1968},
-  doi       = {10.1007/bf01703261}
+  note       = {{D}OI: \url{10.1007/bf01703261}}
 }
 
 @article{maclane1963natural,
@@ -237,22 +237,22 @@
   author    = {Gabriel Scherer and
                Ddier R{\'{e}}my},
   title     = {Which Simple Types Have a Unique Inhabitant?},
-  booktitle = {Proc. of 20th {ACM} {SIGPLAN} Int. Conf. on
+  booktitle = {Proceedings of 20th {ACM} {SIGPLAN} International Conference on
                Functional Programming, ICFP~'15},
   pages     = {243--255},
   publisher = {{ACM}},
   year      = {2015},
-  doi       = {10.1145/2784731.2784757}
+  note       = {{D}OI: \url{10.1145/2784731.2784757}}
 }
 
 @article{street:skew-closed:2013,
 	title = {Skew-Closed Categories},
 	volume = {217},
-	doi = {10.1016/j.jpaa.2012.09.020},
+	note = {{D}OI: \url{10.1016/j.jpaa.2012.09.020}},
 	pages = {973--988},
 	number = {6},
 	XXXjournal = {J. Pure Appl. Alg.},
-	journal = "J. of Pure and Applied Algebra",
+	journal = "Journal of Pure and Applied Algebra",
 	author = {Ross Street},
 	year = {2013},
 }
@@ -262,7 +262,7 @@
 	volume = {231},
         XXXjournal = {Adv.\ Math.},
 	journal = "Advances in Mathematics",
-	doi = {10.1016/j.aim.2012.06.027},
+	note = {{D}OI: \url{10.1016/j.aim.2012.06.027}},
 	pages = {1694--1730},
 	number = {3--4},
 	author = {Korn{\'e}l Szlach\'anyi},
@@ -274,14 +274,14 @@
   editor    = {Christel Baier and
                Jean Goubault{-}Larrecq},
   title     = {Realizability without Symmetry},
-  booktitle = {Proc. of 29th {EACSL} Ann. Conf. on Computer Science Logic, {CSL} 2021},
+  booktitle = {Proceedings of 29th {EACSL} Annual Conference on Computer Science Logic, {CSL} 2021},
   XXXseries    = {Leibniz Int.\ Proc.\ in Inform.},
-  series = "Leibniz Int.\ Proc.\ in Informatics",
+  series = "Leibniz International\ Proceedings\ in Informatics",
   volume    = {183},
   pages     = {38:1--38:16},
   publisher = {Dagstuhl Publishing},
   year      = {2021},
-  doi       = {10.4230/lipics.csl.2021.38}
+  note       = {{D}OI: \url{10.4230/lipics.csl.2021.38}}
 }
 
 
@@ -292,21 +292,21 @@
   editor    = {Claudio {Sacerdoti Coen} and
                Alwen Tiu},
   title     = {Deductive Systems and Coherence for Skew Prounital Closed Categories},
-  booktitle = {Proc. of 15th Workshop on Logical Frameworks and Meta-Languages:
+  booktitle = {Proceedings of 15th Workshop on Logical Frameworks and Meta-Languages:
                Theory and Practice, {LFMTP} 2020},
   XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
-  series = "Electronic Proc. in Theoretical Computer Science",
+  series = "Electronic Proceedings in Theoretical Computer Science",
   volume    = {332},
   pages     = {35--53},
   year      = {2021},
-  doi       = {10.4204/eptcs.332.3},
+  note       = {{D}OI: \url{10.4204/eptcs.332.3}},
   publisher = "Open Publishing Association"
 }
 
 @article{uustalu:eilenberg-kelly:2020,
 	title = {{E}ilenberg-{K}elly Reloaded},
 	volume = {352},
-	doi = {10.1016/j.entcs.2020.09.012},
+	note = {{D}OI: \url{10.1016/j.entcs.2020.09.012}},
 	pages = {233--256},
 	XXXjournal = {Electron. Notes Theor. Comput. Sci.},
 	journal = "Electronic Notes in Theoretical Computer Science",
@@ -321,14 +321,14 @@
   editor    = {David I. Spivak and
                Jamie Vicary},
   title     = {Proof Theory of Partially Normal Skew Monoidal Categories},
-  booktitle = {Proc. of 3rd Ann. Int. Applied Category Theory
-               Conf. 2020, {ACT} 2020},
+  booktitle = {Proceedings of 3rd Annual International Applied Category Theory
+               Conference 2020, {ACT} 2020},
   XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
-  series = "Electronic Proc. in Theoretical Computer Science",
+  series = "Electronic Proceedings in Theoretical Computer Science",
   volume    = {333},
   pages     = {230--246},
   year      = {2021},
-  doi       = {10.4204/eptcs.333.16},
+  note       = {{D}OI: \url{10.4204/eptcs.333.16}},
   publisher = "Open Publishing Association"
   }
 
@@ -341,18 +341,18 @@
   volume={20},
   pages={377--406},
   year={2021},
-  doi = {10.1007/978-3-030-66545-6_11},
+  note = {{D}OI: \url{10.1007/978-3-030-66545-6_11}},
   publisher={Springer}
 }
 
 
 @inproceedings{veltri:coherence:2021,
 	title = {Coherence via Focusing for Symmetric Skew Monoidal Categories},
-	doi = {10.1007/978-3-030-88853-4_12},
+	note = {{D}OI: \url{10.1007/978-3-030-88853-4_12}},
 	XXXseries = {Lect. Notes in Comput. Sci.},
 	series = "Lecture Notes in Computer Science",
 	pages = {184--200},
-	booktitle = {Proc.\ of 27th Int.\ Workshop on Logic, Language, Information, and Computation, WoLLIC 2021},
+	booktitle = {Proceedings\ of 27th International\ Workshop on Logic, Language, Information, and Computation, WoLLIC 2021},
 	publisher = {Springer},
 	author = {Niccol{\`o} Veltri},
 	editor = {Alexandra Silva and Renata Wassermann and Ruy {de Queiroz}},
@@ -370,19 +370,19 @@
   number    = {1},
   eid = 9,
   year      = {2019},
-  doi       = {10.23638/lmcs-15(1:9)2019}
+  note       = {{D}OI: \url{10.23638/lmcs-15(1:9)2019}}
 }
 
 @incollection{dyckhoff:ljq,
   author = "Roy Dyckhoff and St{\'e}phane Lengrand",
   title = "LJQ: A Strongly Focused Calculus for Intuitionistic Logic",
   editor = "Arnold Beckmann and Ulrich Berger and Benedikt L{\"o}we and John V. Tucker",
-  booktitle = "Proc.\ of 2nd Conf.\ on Computability in Europe, CiE 2006",
+  booktitle = "Proceedings\ of 2nd Conf.\ on Computability in Europe, CiE 2006",
   XXXseries = "Lect.\ Notes in Comput.\ Sci.",
   series = "Lecture Notes in Computer Science",
   volume = 3988,
   pages = "173--185",
   publisher = "Springer",
   year = 2006,
-  doi = "10.1007/11780342_19"
+  note = {{D}OI: \url{10.1007/11780342_19}}
 }  
